<resources>
    <string name="app_name">Majordome</string>
    <string name="title_activity_majordome">Majordome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Majordome</string>
    <string name="nav_header_subtitle">Organisation de la maison</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Today</string>
    <string name="menu_espaces">Espaces</string>
    <string name="menu_todolist">Liste de Courses</string>
    <string name="menu_stocks">Stocks</string>
    <string name="menu_manage">Membres</string>
    <string name="menu_send">Mission Store</string>

    <string name="hint_spaces">Espaces...</string>
    <string name="button_save">Enregistrer</string>
    <string name="empty_not_saved">Espace non enregistré car il est vide.</string>
</resources>
