<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_espaces" />



    </group>

    <item android:title="Produits">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/menu_todolist" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_local_shipping_black_24dp"
                android:title="@string/menu_stocks" />
        </menu>
    </item>

    <item android:title="Maison">
        <menu>
           <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/menu_manage" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
